# readline

./: Cargo.toml  LICENSE  README.md
readline-sys/: Cargo.toml  build.rs  lib.rs
src/: lib.rs
