[package]

name = "readline"
version = "0.0.4"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>"]

description = "Wrapper around readline on Linux and Mac OS X, a shim on Windows"

documentation = "https://github.com/GBGamer/readline-sys"
homepage = "https://github.com/GBGamer/readline-sys"
repository = "https://github.com/GBGamer/readline-sys"

readme = "README.md"

keywords = ["readline", "input"]

license = "MIT"

[dependencies]
readline-sys = "0.0.1"
