[package]

name = "readline"
version = "0.0.7"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>", "Torste Aikio <zokier@gmail.com>"]

description = "Wrapper around readline on Linux and Mac OS X, a shim on Windows"

documentation = "https://github.com/zokier/readline"
homepage = "https://github.com/zokier/readline"
repository = "https://github.com/zokier/readline"

readme = "README.md"

keywords = ["readline", "input"]

license = "MIT"

[dependencies]
readline-sys = ">0.0.1"
